--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 /* GLOBAL*/
 :root {
-    --dar-blue: #363f5f;
+    --dar-blue: #363f5f; /* aqui é uma variavel*/
+    --green: #49aa26;
+    --azulbb: #add8e6;
+    --red: #e92929;
 } 
 
 * {
@@ -9,9 +12,25 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 93.75%;
+}
+
 body {
     background: #f0f2f5;
     font-family:  'Roboto', sans-serif;
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;    
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
 }
 
 .container {
@@ -26,6 +45,56 @@ h2 {
     color: var(--dark-blue);
     font-weight: normal;
 }
+
+/* Links $ Buttons */
+a {
+    color:#3dd705;
+    text-decoration: none;
+}
+
+a.hover {
+    color: #49aa26;
+
+}
+
+button {
+    width: 100%;
+    height: 50px;
+
+    border: none;
+    color: white;
+    background: var(--green);
+    padding: 0;
+    border-radius: 0.25rem;
+    cursor: pointer;
+}
+
+button:hover {
+    background: var(--azulbb);
+}   
+
+.button.new {
+    display: inline-block;
+    margin-bottom: .8rem;
+}
+
+.button.cancel {
+    color: var(--red);
+    border: 2px var(--red) solid;
+    border-radius: 0.25rem;
+    height: 50px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    opacity: 06;
+} 
+
+.button.cancel:hover{
+    opacity: 1;
+}
+
 
 /*HEADER E O H1 DO HEADER */
 header{
@@ -62,6 +131,9 @@ header{
 .card h3 {
     font-weight: normal;
     font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .card p {
@@ -76,10 +148,17 @@ header{
 }
 
 /* table */
+
+#transation {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+}
+
 #data-table {
     width: 100%;
     border-spacing: 0 0.5rem;
-    color: #969cb3
+    color: #969cb3;
 }
 
 table thead th {
@@ -104,10 +183,16 @@ table tbody tr:hover {
 }
 
 table thead tr th:first-child,
-table tbody tr td:first-child{
+table tbody tr td:first-child {
     border-radius: 0.25rem 0 0 0.25rem;
 
 }
+
+table thead tr th:last-child,
+table tbody tr td:last-child {
+    border-radius: 0 0.25rem 0.25rem 0;
+}
+
 
 td.description {
     color: var(--dar-blue);
@@ -128,4 +213,81 @@ footer {
     padding: 4rem 0 2rem;
     color: var(--dark-blue);
     opacity: 0.6
+}
+
+/* modal */
+.modal-overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0,0,0,0.7);
+    
+    position: fixed; /* position destrava outras propriedades, tudo que ta abaixo*/
+    top: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal {
+    background: #f0f2f5;
+    padding: 2.4rem;
+    position: relative;
+}
+
+/* Form */
+
+#form {
+    max-width: 500px;
+}
+
+#form h2 {
+    margin-top: 0;
+}
+
+input {
+    border: none;
+    border-radius: 0.2rem;
+
+    padding: 0.8rem;
+    width: 100%;
+}
+
+.input-group {
+    margin-top: 0.8rem;
+}
+
+.input-group small {
+    opacity: 0.4;
+}
+
+.input-group.actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.input-group.actions .button,
+.input-group.actions button {
+    width: 48%;
+}
+
+
+/* Responsividade */
+@media (min-width: 800px) {
+    html {
+        font-size: 87.5%;
+    }
+    #balance {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); /*divide em frações alem de fr aceita % lembrando que ali é um 1fr para cada coluna e podemos colorar o repeat(quantidade de coluna, e um 1fr fração para cada uma)*/
+        gap: 2rem; /* espaço entre as colunas */
+    }
 }
